<resources>
    <string name="app_name">InadiPay</string>
    <string name="operations">Operações</string>
    <string name="_default">Inadimplência</string>
    <string name="costumer_active_wallet">Carteira Ativa</string>
    <string name="costumer_name">Nome do Cliente</string>
    <string name="costumer_bill">R$ 1000,00</string>
    <string name="register_new_customer">Cadastrar Cliente</string>
    <string name="firstname">Nome</string>
    <string name="surname">Sobrenome</string>
    <string name="cpf">CPF</string>
    <string name="payment_date">Data de Pagamento</string>
    <string name="amount_released">Valor a Liberar</string>
    <string name="register">Cadastrar</string>
    <string name="register_costumer">CADASTRAR CLIENTE</string>
    <string name="this_field_cant_be_null">Esse campo não pode ser vazio</string>
    <string name="invalid_cpf">CPF inválido</string>
    <string name="any_field_can_be_null">Nenhum campo pode ser vazio</string>
    <string name="invalid_date">Data inválida</string>
    <string name="delete_message">Deseja excluir o registro?</string>
    <string name="phone">Celular</string>
    <string name="next">Avançar</string>
    <string name="installment">Parcelas</string>
    <string name="update_message">Confimar Pagamento</string>
    <string name="hello">Olá,</string>
    <string name="welcome">Bem Vindo</string>
    <string name="amount">1000</string>
    <string name="delete">Apagar Registro</string>
    <string name="confirm_payment">Confirmar Pagamento</string>
    <string name="active_wallet">Carteira Ativa</string>
    <string name="credit_amount">Valor Total de Crédito Emprestado</string>
    <string name="total_amount">R$ %1$s</string>
    <string name="type_payment_amount">Valor do Pagamento</string>
    <string name="payment_cant_be_bigger">valor de pagamento não pode ser maior que valor da carteira ativa!</string>
    <string name="defaults">Inadimplência</string>
    <string name="default_text">Valor total em inadimplência: R$%1$s (%2$s)</string>
    <string name="intallment_value">Valor das Parcelas</string>
    <string name="invalid_phone">Celular inválido</string>
    <string name="installment_value_cant_be_bigger">Valor da parcela não pode ser maior que valor a ser liberado</string>
    <string name="invalid_installment">Valor das parcelas inválido</string>
    <string name="total_amount_cardview">Valor Total Liberado: R$%1$s</string>
    <string name="cant_be_zero">valor do pagamento não pode ser igual a zero.</string>
    <string name="wallet_is_null">Cadastre clientes antes</string>
    <string name="still_nothing">Nenhum Cliente Cadastrado</string>
    <string name="error">Não foi possível deletar, tente novamente mais tarde</string>
    <string name="wallet_now_zero">Carteira zerada</string>
    <string name="does_the_client_paid">O cliente pagou?</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="customer_paid">O cliente pagou? Confirme o pagamento</string>

</resources>