<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.view.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">




        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.InadiPay.TextInputLayoutStyle"
            android:id="@+id/register_input_date"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edit_date"
                style="@style/Theme.InadiPay.EditTextStyle"
                android:hint="@string/payment_date"
                android:inputType="date"/>

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.InadiPay.TextInputLayoutStyle"
            android:id="@+id/register_input_installment"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edit_installment"
                style="@style/Theme.InadiPay.EditTextStyle"
                android:hint="@string/installment"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.InadiPay.TextInputLayoutStyle"
            android:id="@+id/register_input_amount_released"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edit_amount_released"
                style="@style/Theme.InadiPay.EditTextStyle"
                android:hint="@string/amount_released"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.InadiPay.TextInputLayoutStyle"
            android:id="@+id/register_input_installment_value"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edit_installment_value"
                style="@style/Theme.InadiPay.EditTextStyle"
                android:hint="@string/intallment_value"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <co.aladinjunior.inadipay.register.view.LoadingButton
            android:id="@+id/register_button"
            app:text="@string/register"
            android:backgroundTint="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"/>


    </LinearLayout>




</ScrollView>