<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".register.view.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">


        <ImageView
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:src="@drawable/icon"
            android:layout_width="100dp"
            android:layout_height="100dp"/>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Theme.InadiPay.TextInputLayoutStyle"
        android:id="@+id/register_input_name"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_edit_name"
            style="@style/Theme.InadiPay.EditTextStyle"
            android:hint="@string/firstname"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Theme.InadiPay.TextInputLayoutStyle"
        android:id="@+id/register_input_surname"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_edit_surname"
            style="@style/Theme.InadiPay.EditTextStyle"
            android:hint="@string/surname"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Theme.InadiPay.TextInputLayoutStyle"
        android:id="@+id/register_input_cpf"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_edit_cpf"
            style="@style/Theme.InadiPay.EditTextStyle"
            android:hint="@string/cpf"
            android:inputType="number"
            android:maxLength="14"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Theme.InadiPay.TextInputLayoutStyle"
        android:id="@+id/register_input_phone"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_edit_phone"
            style="@style/Theme.InadiPay.EditTextStyle"
            android:maxLength="14"
            android:hint="@string/phone"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>


    <co.aladinjunior.inadipay.register.view.LoadingButton
        android:id="@+id/register_button"
        app:text="@string/next"
        android:backgroundTint="@color/yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="center"/>


    </LinearLayout>




</ScrollView>