<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

   >

    <RelativeLayout
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:background="@color/red"
        android:id="@+id/container_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hello"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:text="@string/register_new_customer"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </RelativeLayout>





    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/container_main"
        android:layout_marginTop="20dp" />


</RelativeLayout>