<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_primary"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">




    <TextView
        android:layout_marginTop="36dp"
        android:id="@+id/active_wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_wallet"
        android:textColor="@color/red"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:ignore="MissingPrefix" />

    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="true"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp"
        app:contentPadding="10dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/active_wallet"
        android:layout_width="500dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit_amount"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/red"/>

            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

            <TextView
                android:visibility="gone"
                android:id="@+id/wallet"
                android:textStyle="bold|italic"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:text="@string/total_amount"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="29sp"/>

            <ImageView
                android:alpha="0.4"
                android:src="@drawable/money"
                android:layout_width="350dp"
                android:layout_height="400dp"
                android:layout_gravity="center"/>

        </LinearLayout>



    </androidx.cardview.widget.CardView>







</RelativeLayout>